# wanted_precourse

./: .gitignore  Dockerfile  ReadMe.md  pyproject.toml
src/: main.py
src/config/: app_config.py  db_config.py  table_mapper_config.py
src/member/: router.py
src/member/application/: member_application.py
src/member/domain/: exception.py  model.py
src/member/domain/model/: member.py  member_service.py  membership_application.py
src/member/infra/: MemberRepository.py  mapper.py  member_repository.py  schema.py
src/post/: router.py
src/post/application/: post_application.py
src/post/domain/: exception.py  model.py
src/post/domain/model/: bulletin_board.py  post.py  pre_published_post.py
src/post/domain/view_model/: displayed_post.py
src/post/infra/: mapper.py  post_repository.py  schema.py
src/security/: router.py
src/security/application/: authentication_application.py
src/security/domain/: exception.py  model.py
src/security/domain/model/: authentication_service.py  license.py  login_info.py
src/user/: router.py
tests/: conftest.py
tests/integration/: test_member_repository.py  test_member_schema.py  test_post_repository.py  test_post_schema.py
tests/unit/: test_authentication_application.py  test_authentication_service.py  test_bullentin_board.py  test_member.py  test_member_application.py  test_member_service.py  test_post.py  test_post_application.py
tests/unit/fixtures/: repository.py  service.py
