[tool.poetry]
name = "wanted_bulletin"
version = "0.1.0"
description = ""
authors = ["Joowan Kim <rlawndhks217@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "*"
uvicorn = "*"
sqlalchemy = "*"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
assertpy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
