[tool.poetry]
name = "wanted_bulletin"
version = "0.1.0"
description = ""
authors = ["Joowan Kim <rlawndhks217@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.70.0"
uvicorn = "0.15.0"
sqlalchemy = "1.4.26"
requests = "2.26.0"
python-jose = "3.3.0"
fastapi-pagination = "0.9.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
assertpy = "1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
